some bugs,code smells fix